[gd_scene load_steps=22 format=3 uid="uid://c0y1axyst1ub3"]

[ext_resource type="Script" path="res://addons/panku_console/modules/data_controller/exporter/exporter_2.gd" id="1_0hpei"]
[ext_resource type="Theme" uid="uid://bk18yfu0d77wk" path="res://addons/panku_console/res/panku_console_theme.tres" id="1_dib6o"]
[ext_resource type="PackedScene" uid="uid://cj0urmvj2rtas" path="res://addons/panku_console/modules/data_controller/exporter/row_vec_2.tscn" id="1_v4pbh"]
[ext_resource type="PackedScene" uid="uid://b4jxqh4ysyodt" path="res://addons/panku_console/modules/data_controller/exporter/row_string.tscn" id="2_87515"]
[ext_resource type="PackedScene" uid="uid://dyq4rjkkjs55d" path="res://addons/panku_console/common/smooth_scroll/smooth_scroll.tscn" id="3_gmdfh"]
[ext_resource type="PackedScene" uid="uid://dal16suyx5int" path="res://addons/panku_console/modules/data_controller/exporter/row_read_only.tscn" id="3_r8k7l"]
[ext_resource type="Texture2D" uid="uid://df4ahaw14j8c8" path="res://addons/panku_console/res/icons2/ArrowUp.svg" id="4_54pka"]
[ext_resource type="PackedScene" uid="uid://0q8cm4psmdck" path="res://addons/panku_console/modules/data_controller/exporter/row_category.tscn" id="4_87bmr"]
[ext_resource type="PackedScene" uid="uid://b6w4d5bsp0erj" path="res://addons/panku_console/modules/data_controller/exporter/row_range_number.tscn" id="4_ido8o"]
[ext_resource type="PackedScene" uid="uid://cnsnrihcgjsa" path="res://addons/panku_console/modules/data_controller/exporter/row_int.tscn" id="5_ua2hx"]
[ext_resource type="PackedScene" uid="uid://78evbpdhqe4b" path="res://addons/panku_console/modules/data_controller/exporter/row_group_button.tscn" id="6_mmbw5"]
[ext_resource type="PackedScene" uid="uid://bneg4nt6ryuuj" path="res://addons/panku_console/modules/data_controller/exporter/row_float.tscn" id="7_h6vg4"]
[ext_resource type="PackedScene" uid="uid://dfsypgkiprnp8" path="res://addons/panku_console/modules/data_controller/exporter/row_enum.tscn" id="8_r3qu8"]
[ext_resource type="PackedScene" uid="uid://b4iurk1ni11v2" path="res://addons/panku_console/modules/data_controller/exporter/row_color.tscn" id="9_scg41"]
[ext_resource type="PackedScene" uid="uid://ds3hbsvvlvdyw" path="res://addons/panku_console/modules/data_controller/exporter/row_button.tscn" id="10_vt884"]
[ext_resource type="PackedScene" uid="uid://i2pcctq0i2o3" path="res://addons/panku_console/modules/data_controller/exporter/row_bool.tscn" id="11_0f6sm"]
[ext_resource type="PackedScene" uid="uid://bs5t7eo2pctxb" path="res://addons/panku_console/modules/data_controller/exporter/row_subgroup_button.tscn" id="14_a5xup"]
[ext_resource type="PackedScene" uid="uid://cxnpwuiumbs85" path="res://addons/panku_console/modules/data_controller/exporter/row_comment.tscn" id="16_rh8uf"]
[ext_resource type="Texture2D" uid="uid://ws58gucuygx1" path="res://addons/panku_console/res/icons2/chevron_right.svg" id="16_tdyud"]
[ext_resource type="Texture2D" uid="uid://ciu5jiw4xmkq0" path="res://addons/panku_console/res/icons2/resize-svgrepo-com.svg" id="17_khixa"]

[sub_resource type="LabelSettings" id="LabelSettings_dm157"]

[node name="exporter_2" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dib6o")
split_offset = 300
dragger_visibility = 2
script = ExtResource("1_0hpei")

[node name="SceneExplorerPanel" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SceneExplorer" type="VBoxContainer" parent="SceneExplorerPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="SceneExplorerPanel/SceneExplorer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="ExplorerBackButton" type="Button" parent="SceneExplorerPanel/SceneExplorer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("4_54pka")
icon_alignment = 1

[node name="Control" type="Control" parent="SceneExplorerPanel/SceneExplorer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="SceneExplorerPanel/SceneExplorer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="SceneExplorerTree" type="Tree" parent="SceneExplorerPanel/SceneExplorer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true

[node name="VBoxContainer" type="VBoxContainer" parent="SceneExplorerPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExpandButton" type="Button" parent="SceneExplorerPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ExpandArrowTextureRect" type="TextureRect" parent="SceneExplorerPanel/VBoxContainer/ExpandButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_tdyud")
stretch_mode = 3
flip_h = true

[node name="GrabRect" type="TextureRect" parent="SceneExplorerPanel/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_default_cursor_shape = 12
texture = ExtResource("17_khixa")
expand_mode = 5
stretch_mode = 5
flip_h = true
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="InspectorSettingsPanel" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InspectorSettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="FlowContainer" type="FlowContainer" parent="VBoxContainer/InspectorSettingsPanel/MarginContainer"]
layout_mode = 2

[node name="OnlyPublicCheckBox" type="CheckBox" parent="VBoxContainer/InspectorSettingsPanel/MarginContainer/FlowContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Only Public"

[node name="OnlyScriptVarsCheckBox" type="CheckBox" parent="VBoxContainer/InspectorSettingsPanel/MarginContainer/FlowContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Only Script Vars"

[node name="OnlyExportsCheckBox" type="CheckBox" parent="VBoxContainer/InspectorSettingsPanel/MarginContainer/FlowContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Only Exports"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/InspectorSettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Inspector" parent="VBoxContainer" instance=ExtResource("3_gmdfh")]
layout_mode = 2
size_flags_vertical = 3
follow_content = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Inspector/HBoxContainer/HContainer" index="0"]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -262.0
offset_bottom = 379.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InspectorContainer" type="VBoxContainer" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RowCategory" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("4_87bmr")]
layout_mode = 2
label_settings = SubResource("LabelSettings_dm157")

[node name="RowVec2" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("1_v4pbh")]
layout_mode = 2

[node name="RowString" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("2_87515")]
layout_mode = 2

[node name="RowReadOnly" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("3_r8k7l")]
layout_mode = 2

[node name="RowRangeNumber" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("4_ido8o")]
layout_mode = 2

[node name="RowInt" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("5_ua2hx")]
layout_mode = 2

[node name="GroupButton" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("6_mmbw5")]
layout_mode = 2
text = "Group 3"

[node name="GroupButton2" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("14_a5xup")]
layout_mode = 2

[node name="RowFloat" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("7_h6vg4")]
layout_mode = 2

[node name="RowEnum" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("8_r3qu8")]
layout_mode = 2

[node name="RowColor" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("9_scg41")]
layout_mode = 2

[node name="RowButton" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("10_vt884")]
layout_mode = 2

[node name="RowBool" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("11_0f6sm")]
layout_mode = 2

[node name="RowComment" parent="VBoxContainer/Inspector/HBoxContainer/HContainer/MarginContainer/VBoxContainer2/InspectorContainer" instance=ExtResource("16_rh8uf")]
layout_mode = 2

[editable path="VBoxContainer/Inspector"]
